--- a/add-plan.html
+++ b/add-plan.html
@@ -245,9 +245,9 @@
                     <input class="plan_checkbox" type="checkbox" id="${plan.id}" name="meal_plans" value="${plan.id}">
                     <label for="${plan.id}" class="plan_info r-flex ali-c jut-sb gap-1">
                           <div class="c-flex gap-05">
-                            <span class="w6">${plan.name}</span>
-                            <span>${plan.frequency}</span>
-                            <span>${plan.item}</span>
+                            <span class="w6">${plan.name} - ${plan.type}</span>
+                            <span>${plan.frequency} ${plan.time}</span>
+                            <span>${plan.items}</span>
                             <span class="w4">${plan.description}</span>
                         </div>
                         <div class="c-flex ali-c gap-1">
