--- a/add-plan.html
+++ b/add-plan.html
@@ -128,8 +128,8 @@
                         <label for="filter">Meal Plan Types</label>
                         <select name="filter" id="filter">
                             <option value="all" selected>All</option>
-                            <option value="veg">Veg</option>
-                            <option value="nonveg">Non Veg</option>
+                            <option value="Veg">Veg</option>
+                            <option value="NonVeg">Non Veg</option>
                         </select>
                     </div>
 
