--- a/add-plan2.html
+++ b/add-plan2.html
@@ -368,7 +368,7 @@
         // Show loading bar
         document.getElementById("loading_bar").style.display = "block";
 
-        fetch('https://momscanteen.imeals.in/php/add_plans.php', {
+        fetch('https://momscanteen.imeals.in/php/backend_plans.php', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
