--- a/add-plan2.html
+++ b/add-plan2.html
@@ -168,11 +168,11 @@
                             </div>
                             <div class="r-flex jut-c ali-c gap-1 gap-05">
                                 <div class="filter_btn_options" value="all" id="filter_all">All <span
-                                        class="count">__</span></div>
+                                        class="count">...</span></div>
                                 <div class="filter_btn_options" value="Veg" id="filter_veg">Veg <span
-                                        class="count"></span>__</div>
+                                        class="count">...</span></div>
                                 <div class="filter_btn_options" value="Non-Veg" id="filter_nonveg">Non Veg <span
-                                        class="count">__</span></div>
+                                        class="count">...</span></div>
                             </div>
                         </div>
                     </div>
