--- a/add-plan2.html
+++ b/add-plan2.html
@@ -306,18 +306,21 @@
             }
 
             filteredPlans.forEach(plan => {
+                const vegIcon = plan.type === 'Veg'
+                    ? '<iconify-icon icon="mdi:lacto-vegetarian" style="color: green;"></iconify-icon>'
+                    : '<iconify-icon icon="mdi:lacto-vegetarian" style="color: red;"></iconify-icon>';
                 const planHTML = `
                 <div class="plans r-flex ali-c jut-c gap-1">
                     <input class="plan_checkbox" type="checkbox" id="${plan.id}" name="meal_plans" value="${plan.id}">
                     <label for="${plan.id}" class="plan_info r-flex ali-c jut-sb gap-1">
                           <div class="c-flex gap-05">
-                            <span class="w6">${plan.name} - ${plan.type}</span>
+                            <span class="w6">${vegIcon} ${plan.name}</span>
                             <span>${plan.readable_frequency} ${plan.time}</span>
                             <span>${plan.items}</span>
                             <span class="w4">${plan.description}</span>
                         </div>
                         <div class="c-flex ali-c gap-1">
-                            <img src="https://cdn-icons-png.flaticon.com/512/2771/2771401.pn" alt="">
+                            <iconify-icon icon="mdi:food-outline"></iconify-icon>
                             <span>₹${plan.price}/Meal</span>
                         </div>
                     </label>
