--- a/add-plan2.html
+++ b/add-plan2.html
@@ -315,13 +315,13 @@
                     <label for="${plan.id}" class="plan_info r-flex ali-c jut-sb gap-1">
                           <div class="c-flex gap-05">
                             <span class="w6">${vegIcon} ${plan.name}</span>
-                            <span>${plan.readable_frequency} ${plan.time}</span>
+                            <span>${plan.readable_frequency}</span>
                             <span>${plan.items}</span>
                             <span class="w4">${plan.description}</span>
                         </div>
                         <div class="c-flex ali-c gap-1">
                             <iconify-icon icon="mdi:food-outline"></iconify-icon>
-                            <span>₹${plan.price}/Meal</span>
+                            <span>₹${plan.price}/${plan.time}</span>
                         </div>
                     </label>
                 </div>`;
