--- a/add-plan2.html
+++ b/add-plan2.html
@@ -314,7 +314,7 @@
                     <input class="plan_checkbox" type="checkbox" id="${plan.id}" name="meal_plans" value="${plan.id}">
                     <label for="${plan.id}" class="plan_info r-flex ali-c jut-sb gap-1">
                           <div class="c-flex gap-05">
-                            <span class="w6">${vegIcon} ${plan.name}</span>
+                            <span class="w6 r-flex gap-05 ali-c"><span class="r-flex">${vegIcon}</span><span>${plan.name}</span></span>
                             <span>${plan.readable_frequency}</span>
                             <span>${plan.items}</span>
                             <span class="w4">${plan.description}</span>
