--- a/add-plan2.html
+++ b/add-plan2.html
@@ -368,26 +368,17 @@
     function submitForm(event) {
         event.preventDefault(); // Prevent default form submission
 
-        console.log("Form submission started");
-
         const selectedPlans = [];
         const mealPlanCheckboxes = document.querySelectorAll('input[name="meal_plans"]:checked');
 
-        console.log("Number of checked checkboxes:", mealPlanCheckboxes.length);
-
         mealPlanCheckboxes.forEach(checkbox => {
             selectedPlans.push(checkbox.value);
-            console.log("Added plan:", checkbox.value);
         });
-
-        console.log("Selected plans:", selectedPlans);
 
         // Convert selected plans to JSON format
         const data = JSON.stringify({
-            mealPlans: selectedPlans
+            selectedPlans
         });
-
-        console.log("Data to be sent:", data);
 
         // Show loading bar
         document.getElementById("loading_bar").style.display = "block";
@@ -399,12 +390,8 @@
             },
             body: data
         })
-            .then(response => {
-                console.log("Response status:", response.status);
-                return response.json();
-            })
+            .then(response => response.json()) // Parse JSON response
             .then(data => {
-                console.log("Response data:", data);
                 // Hide loading bar
                 document.getElementById("loading_bar").style.display = "none";
 
@@ -412,7 +399,6 @@
                 alert("Response: " + JSON.stringify(data));
             })
             .catch(error => {
-                console.error("Error:", error);
                 // Hide loading bar
                 document.getElementById("loading_bar").style.display = "none";
 
@@ -421,12 +407,9 @@
             })
             .finally(() => {
                 // Alert that the request was sent
-                alert("Request sent! Selected plans: " + selectedPlans.join(', '));
+                alert("Request sent!");
             });
     }
-
-    // Add this line to check if the script is loaded
-    console.log("Script loaded");
 </script>
 
 </html>
