--- a/add-plan2.html
+++ b/add-plan2.html
@@ -383,7 +383,7 @@
         // Show loading bar
         document.getElementById("loading_bar").style.display = "block";
 
-        fetch('https://webhook.site/2d171683-6c69-47e6-9949-c2a0aeb378e4', {
+        fetch('https://momscanteen.imeals.in/php/backend_add_plan.php', {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
